crates/valen-parser/tests/snapshots/parser__annotation_class_marker.snap
---
source: crates/valen-parser/tests/parser.rs
expression: "check(\"annotation class Serializable\")"
---
=== AST ===
[
    AnnotationClass(
        AnnotationClassDecl {
            visibility: Internal,
            name: "Serializable",
            annotations: [],
            params: [],
            span: Span {
                start: 0,
                end: 29,
                file_id: FileId(
                    0,
                ),
            },
        },
    ),
]
=== diagnostics ===
(none)
