crates/valen-parser/tests/snapshots/parser__annotation_meta_target.snap
---
source: crates/valen-parser/tests/parser.rs
expression: "check(\"@Target(\\\"type\\\")\\nannotation class MyAnnotation\")"
---
=== AST ===
[
    AnnotationClass(
        AnnotationClassDecl {
            visibility: Internal,
            name: "MyAnnotation",
            annotations: [
                Annotation {
                    name: "Target",
                    args: [
                        AnnotationArg {
                            name: None,
                            value: String(
                                "type",
                                Span {
                                    start: 8,
                                    end: 14,
                                    file_id: FileId(
                                        0,
                                    ),
                                },
                            ),
                            span: Span {
                                start: 8,
                                end: 14,
                                file_id: FileId(
                                    0,
                                ),
                            },
                        },
                    ],
                    span: Span {
                        start: 0,
                        end: 15,
                        file_id: FileId(
                            0,
                        ),
                    },
                },
            ],
            params: [],
            span: Span {
                start: 0,
                end: 45,
                file_id: FileId(
                    0,
                ),
            },
        },
    ),
]
=== diagnostics ===
(none)
