crates/valen-parser/tests/snapshots/parser__as_cast.snap
---
source: crates/valen-parser/tests/parser.rs
expression: "check(\"fn f(x: Int) -> Long { x as Long }\")"
---
=== AST ===
[
    Fn(
        FnDecl {
            annotations: [],
            visibility: Internal,
            name: "f",
            generics: [],
            params: [
                Param {
                    name: "x",
                    ty: Path(
                        TypePath {
                            segments: [
                                TypePathSegment {
                                    name: "Int",
                                    generics: [],
                                    span: Span {
                                        start: 8,
                                        end: 11,
                                        file_id: FileId(
                                            0,
                                        ),
                                    },
                                },
                            ],
                            span: Span {
                                start: 8,
                                end: 11,
                                file_id: FileId(
                                    0,
                                ),
                            },
                        },
                    ),
                    mutable: false,
                    default: None,
                    span: Span {
                        start: 5,
                        end: 11,
                        file_id: FileId(
                            0,
                        ),
                    },
                },
            ],
            return_type: Some(
                Path(
                    TypePath {
                        segments: [
                            TypePathSegment {
                                name: "Long",
                                generics: [],
                                span: Span {
                                    start: 16,
                                    end: 20,
                                    file_id: FileId(
                                        0,
                                    ),
                                },
                            },
                        ],
                        span: Span {
                            start: 16,
                            end: 20,
                            file_id: FileId(
                                0,
                            ),
                        },
                    },
                ),
            ),
            body: Some(
                Block {
                    stmts: [],
                    tail: Some(
                        Cast(
                            CastExpr {
                                expr: Path(
                                    Path {
                                        segments: [
                                            PathSegment {
                                                name: "x",
                                                double_colon: false,
                                                generics: [],
                                                span: Span {
                                                    start: 23,
                                                    end: 24,
                                                    file_id: FileId(
                                                        0,
                                                    ),
                                                },
                                            },
                                        ],
                                        span: Span {
                                            start: 23,
                                            end: 24,
                                            file_id: FileId(
                                                0,
                                            ),
                                        },
                                    },
                                ),
                                target_ty: Path(
                                    TypePath {
                                        segments: [
                                            TypePathSegment {
                                                name: "Long",
                                                generics: [],
                                                span: Span {
                                                    start: 28,
                                                    end: 32,
                                                    file_id: FileId(
                                                        0,
                                                    ),
                                                },
                                            },
                                        ],
                                        span: Span {
                                            start: 28,
                                            end: 32,
                                            file_id: FileId(
                                                0,
                                            ),
                                        },
                                    },
                                ),
                                span: Span {
                                    start: 23,
                                    end: 32,
                                    file_id: FileId(
                                        0,
                                    ),
                                },
                            },
                        ),
                    ),
                    span: Span {
                        start: 21,
                        end: 34,
                        file_id: FileId(
                            0,
                        ),
                    },
                },
            ),
            is_open: false,
            is_override: false,
            is_abstract: false,
            is_unsafe: false,
            span: Span {
                start: 0,
                end: 34,
                file_id: FileId(
                    0,
                ),
            },
        },
    ),
]
=== diagnostics ===
(none)
