crates/valen-parser/tests/snapshots/parser__break_no_value.snap
---
source: crates/valen-parser/tests/parser.rs
expression: "check(\"fn f() { loop { break; } }\")"
---
=== AST ===
[
    Fn(
        FnDecl {
            visibility: Internal,
            name: "f",
            generics: [],
            params: [],
            return_type: None,
            body: Some(
                Block {
                    stmts: [],
                    tail: Some(
                        Loop(
                            LoopExpr {
                                body: Block {
                                    stmts: [
                                        ExprSemi(
                                            Break(
                                                BreakExpr {
                                                    value: None,
                                                    span: Span {
                                                        start: 16,
                                                        end: 21,
                                                        file_id: FileId(
                                                            0,
                                                        ),
                                                    },
                                                },
                                            ),
                                        ),
                                    ],
                                    tail: None,
                                    span: Span {
                                        start: 14,
                                        end: 24,
                                        file_id: FileId(
                                            0,
                                        ),
                                    },
                                },
                                span: Span {
                                    start: 9,
                                    end: 24,
                                    file_id: FileId(
                                        0,
                                    ),
                                },
                            },
                        ),
                    ),
                    span: Span {
                        start: 7,
                        end: 26,
                        file_id: FileId(
                            0,
                        ),
                    },
                },
            ),
            is_open: false,
            is_override: false,
            is_abstract: false,
            span: Span {
                start: 0,
                end: 26,
                file_id: FileId(
                    0,
                ),
            },
        },
    ),
]
=== diagnostics ===
(none)
